--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,24 @@
     <link rel="shortcut icon" href="/favicon.ico?v=4" />
 
     <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
+    <!-- <script async src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script> -->
 
     <!-- Normalizer -->
     <link href="../bower_components/normalize.css/normalize.css" rel="stylesheet" />
+
+    <!-- ModernizrJS -->
+    <script src="../bower_components/modernizr/modernizr.js" type="text/javascript"></script>
+
+    <!-- Foundation -->
+    <script src="../bower_components/foundation/js/foundation.min.js" type="text/javascript"></script>
+    <!-- <link href="../bower_components/foundation/css/normalize.min.css" rel="stylesheet" /> -->
+    <link href="../bower_components/foundation/css/foundation.min.css" rel="stylesheet" />
+
+
+    <!-- Bootstrap
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" type="text/javascript"></script>
+    -->
 
 
     <!-- build:css resources/css/style.min.css -->
@@ -29,7 +43,32 @@
 </head>
 
 <body>
-  Ola Mundo!
+  <header>
+    <div class="row">
+      <div class="small-12 small-centered columns">
+        <h1>Matheus Messora</h1>
+        <h3>Desenvolvedor Full-stack<h3/>
+      </div>
+    </div>
+  </header>
+
+
+  <!-- Blog Posts -->
+  <section>
+    <main>
+      <div class="row">
+        <div class="small-12 small-centered columns">
+
+          <!-- Article -->
+          <article>
+            
+          </article>
+        </div>
+      </div>
+    </main>
+  </section>
 </body>
+
+
 
 </html>
