--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
             <div class="content small-12 medium-10 columns">
               <h2>#12 - Fazendo TDD de verdade</h2>
               <p class="description">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining... <a href="#">Leia mais sobre Fazendo TDD de verdade</a>
               </p>
               <footer>
                 <div class="tags">
@@ -102,7 +102,7 @@
             <div class="content small-12 medium-10 columns">
               <h2>#12 - Fazendo TDD de verdade</h2>
               <p class="description">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book, remaining... <a href="#">Leia mais sobre Fazendo TDD de verdade</a>
               </p>
               <footer>
                 <div class="tags">
