--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,800,400' rel='stylesheet' type='text/css'>
 
     <!-- jQuery -->
-    <!-- <script async src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script> -->
+    <script async src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
 
     <!-- Normalizer -->
     <link href="../bower_components/normalize.css/normalize.css" rel="stylesheet" />
