--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,11 @@
     <script src="../bower_components/foundation/js/foundation.min.js" type="text/javascript"></script>
     <!-- <link href="../bower_components/foundation/css/normalize.min.css" rel="stylesheet" /> -->
     <link href="../bower_components/foundation/css/foundation.min.css" rel="stylesheet" />
+    <!-- Foundation Icons -->
+    <link href="../bower_components/foundation-icon-fonts/foundation-icons.css" rel="stylesheet" />
+
+    <!-- Bootstrap Icons -->
+    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
 
 
     <!-- Bootstrap
@@ -49,8 +54,11 @@
   <header>
     <div class="row">
       <div class="small-12 small-centered columns">
-        <h1>Matheus Messora</h1>
-        <h3>Desenvolvedor Full-stack<h3/>
+        <h1>M.</h1>
+        <h3>Developer <i class="fi-heart"></i><h3/>
+      </div>
+      <div class="scroller">
+        <span class="glyphicon glyphicon-chevron-down "></span>
       </div>
     </div>
   </header>
