--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
 </head>
 
 <body>
-  <proto-element></proto-element>
+  <btn-menu-hide></btn-menu-hide>
 
   <div id="aside-fade"></div>
   <aside>
