--- a/src/resources/polymer/menu-btn.html
+++ b/src/resources/polymer/menu-btn.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../../bower_components/polymer/polymer.html">
 
 
-<dom-module id="proto-element">
+<dom-module id="btn-menu-hide">
 
   <style>
     #menu-btn {
@@ -29,7 +29,7 @@
   <script>
     // element registration
     Polymer({
-      is: "proto-element",
+      is: "btn-menu-hide",
 
       listeners: {
         'menu-btn.tap': 'regularTap'
