--- a/src/index.html
+++ b/src/index.html
@@ -153,8 +153,8 @@
                         </p>
                         <footer>
                             <div class="tags">
-                                <a href="/tags/#svg">svg</a>
-                                <a href="/tags/#svg">css</a>
+                                <a class="shadow-1" href="/tags/#svg">svg</a>
+                                <a class="shadow-1"  href="/tags/#svg">css</a>
                             </div>
                         </footer>
 
@@ -183,8 +183,8 @@
                         </p>
                         <footer>
                             <div class="tags">
-                                <a href="/tags/#svg">svg</a>
-                                <a href="/tags/#svg">css</a>
+                                <a class="shadow-1" href="/tags/#svg">svg</a>
+                                <a class="shadow-1"  href="/tags/#svg">css</a>
                             </div>
                         </footer>
 
