--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
                         </a>
                     </div>
                     <div class="content small-12 medium-9 columns">
-                        <h2>#12 - Fazendo TDD de verdade</h2>
+                        <h2><a href="/preparando-ambiente-de-desenvolvimento-java">#12 - Fazendo TDD de verdade</a></h2>
 
                         <p class="description">
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
