--- a/src/voce-e-um-bom-programador.html
+++ b/src/voce-e-um-bom-programador.html
@@ -141,7 +141,8 @@
                         </blockquote>
 
                         <p>Ele foi fundado em 2001, por um grupo de 17 pessoas que formaram o <a
-                                href="http://www.agilealliance.org/the-alliance/the-agile-manifesto/" target="_blank">Agile Alliance</a>. Apesar de ser
+                                href="http://www.agilealliance.org/the-alliance/the-agile-manifesto/" target="_blank">Agile
+                            Alliance</a>. Apesar de ser
                             antigo, ainda muitas empresas não conhecem ou não entendem a fundo seus benefícios.</p>
 
                         <p>Os 4 valores devem ser lidos da seguinte forma. Apesar de você dar atenção aos conceitos da
@@ -196,19 +197,23 @@
 
                         <h4>4. <strong>Responder a mudanças</strong> mais que seguir um plano</h4>
 
-                        <p>Opiniões de usuários, tecnologias e principalmente, o negócio mudam frequentemente, podemos
-                            dizer até mesmo diariamente. Mudanças e alterações são uma realidade na área de tecnologia e
+                        <p>Opiniões de usuários, tecnologias e principalmente, o negócio mudam frequentemente. Mudanças
+                            e alterações são uma realidade na área de tecnologia e
                             seu
                             plano de desenvolvimento deve refletir isso. Um plano de projeto, deve ser flexível, para se
-                            enquadrar em qualquer mudança de planos. Caso contrario, seu plano nada mais é que uma
-                            bomba,
-                            prestes a explodir.
+                            enquadrar em qualquer mudança de planos.
                         </p>
 
                         <h3>Resumindo</h3>
 
-                        <p>O mais interessante deste manifesto é que todos concordam com ele, mas poucos são aqueles que
-                            o colocam em prática.</p>
+                        <p>O manifesto ágil nasceu para tentar suprir as necessidades dos novos negócios, sem reduzir qualidade ou aumentar os custos. </p>
+
+                        <p>O mais interessante deste manifesto é que ele parece ser muito óbvio, mas são poucos aqueles que o colocam em prática de maneira adequada.</p>
+
+                        <blockquote>
+                            Senior management will always claim that its employees are the most important aspect of your organization, yet insist they follow ISO-9000 compliant processes and treat their staff as replaceable assets. Even worse, management often refuses to provide sufficient resources to comply to the processes that they insist project teams follow.
+                            <footer>Scott W. Ambler</footer>
+                        </blockquote>
 
                         <p>O movimento ágil ensina que o desenvolvimento de software é melhor realizado com: <strong>simplicidade</strong>,
                             <strong>iteratividade</strong>, <strong>comunicação</strong>, <strong>colaboração</strong> e
@@ -219,7 +224,8 @@
                         <h4>Links relacionados</h4>
 
                         <ul>
-                            <li><a href="http://www.agilemanifesto.org/iso/ptbr/" target="_blank">Manifesto Ágil</a></li>
+                            <li><a href="http://www.agilemanifesto.org/iso/ptbr/" target="_blank">Manifesto Ágil</a>
+                            </li>
                             <li>
                                 <a href="http://www.ambysoft.com/essays/agileManifesto.html" target="_blank">Examining
                                     the Agile Manifesto</a>
@@ -234,8 +240,11 @@
                         <h4>Livros</h4>
 
                         <ul>
-                            <li><a href="http://www.amazon.com/dp/B008NAKA5O/" target="_blank">Essential Scrum: A Practical Guide to the Most Popular Agile Process</a> </li>
-                            <li><a href="http://www.amazon.com.br/Scrum-fazer-dobro-trabalho-metade-ebook/dp/B00OEI3TKM" target="_blank">Scrum - a arte de fazer o dobro de trabalho na metade do tempo [EBook Kindle]</a> </li>
+                            <li><a href="http://www.amazon.com/dp/B008NAKA5O/" target="_blank">Essential Scrum: A
+                                Practical Guide to the Most Popular Agile Process</a></li>
+                            <li><a href="http://www.amazon.com.br/Scrum-fazer-dobro-trabalho-metade-ebook/dp/B00OEI3TKM"
+                                   target="_blank">Scrum - a arte de fazer o dobro de trabalho na metade do tempo [EBook
+                                Kindle]</a></li>
                         </ul>
 
                         <footer>
