--- a/src/preparando-ambiente-de-desenvolvimento-java.html
+++ b/src/preparando-ambiente-de-desenvolvimento-java.html
@@ -130,11 +130,6 @@ Java HotSpot(TM) Client VM (build 24.79-b02, mixed mode)
     </main>
 </section>
 
-<!-- build:js resources/js/app.min.css -->
-<script src="resources/js/app.js"></script>
-<script src="resources/js/modules/menu-btn.js"></script>
-<!-- endbuild -->
-
-
+include "includes/footer.html"
 </body>
 </html>
