--- a/src/voce-e-um-bom-programador.html
+++ b/src/voce-e-um-bom-programador.html
@@ -201,11 +201,6 @@ include "includes/menu.html"
     </main>
 </section>
 
-<!-- build:js resources/js/app.min.css -->
-<script src="resources/js/app.js"></script>
-<script src="resources/js/modules/menu-btn.js"></script>
-<!-- endbuild -->
-
-
+include "includes/footer.html"
 </body>
 </html>
