--- a/src/index.html
+++ b/src/index.html
@@ -50,19 +50,13 @@ include "includes/menu.html"
                         </a>
                     </div>
                     <div class="content small-12 medium-9 columns">
-                        <h2><a href="/voce-e-um-bom-programador">Você é um bom programador?</a></h2>
+                        <h2><a href="voce-e-um-bom-programador.html">Você é um bom programador?</a></h2>
 
                         <p class="description">
                             Você se considera um bom programador? O que é ser um bom programador para você?
                             Você trabalha em algum projeto que estourou o prazo, possui baixa qualidade de software ou outro problema grave?
                             Entenda um pouco sobre a metodologia ágil, um conceito revolucionário em desenvolvimento de software que muitas empresas estão pensando em aderir.
                         </p>
-                        <footer>
-                            <div class="tags">
-                                <a class="shadow-1" href="/tags/#svg">svg</a>
-                                <a class="shadow-1"  href="/tags/#svg">css</a>
-                            </div>
-                        </footer>
 
                     </div>
                 </article>
@@ -79,17 +73,11 @@ include "includes/menu.html"
                         </a>
                     </div>
                     <div class="content small-12 medium-9 columns">
-                        <h2><a href="/preparando-ambiente-de-desenvolvimento-java">Preparando seu ambiente de desenvolvimento Java</a></h2>
+                        <h2><a href="preparando-ambiente-de-desenvolvimento-java">Preparando seu ambiente de desenvolvimento Java</a></h2>
 
                         <p class="description">
                             Preparado para entrar no mundo JAVA? Crie seu ambiente de desenvolvimento Java com este artigo. Vou ensinar como configurar o Java (JDK) e até mesmo instalar o Eclipse. Para você que está começando agora com Java, será de muita utilidade.
                         </p>
-                        <footer>
-                            <div class="tags">
-                                <a class="shadow-1" href="/tags/#svg">svg</a>
-                                <a class="shadow-1"  href="/tags/#svg">css</a>
-                            </div>
-                        </footer>
 
                     </div>
                 </article>
@@ -106,19 +94,13 @@ include "includes/menu.html"
                         </a>
                     </div>
                     <div class="content small-12 medium-9 columns">
-                        <h2><a href="/voce-e-um-bom-programador">Você é um bom programador?</a></h2>
+                        <h2><a href="voce-e-um-bom-programador">Você é um bom programador?</a></h2>
 
                         <p class="description">
                             Você se considera um bom programador? O que é ser um bom programador para você?
                             Você trabalha em algum projeto que estourou o prazo, possui baixa qualidade de software ou outro problema grave?
                             Entenda um pouco sobre a metodologia ágil, um conceito revolucionário em desenvolvimento de software que muitas empresas estão pensando em aderir.
                         </p>
-                        <footer>
-                            <div class="tags">
-                                <a class="shadow-1" href="/tags/#svg">svg</a>
-                                <a class="shadow-1"  href="/tags/#svg">css</a>
-                            </div>
-                        </footer>
 
                     </div>
                 </article>
