Inclusao dos links sociais

--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,11 @@ include "includes/menu.html"
                     <h3>
                         Fullstack Software Engineer
                     </h3>
-                    <p><i class="fi-social-github"></i> <i class="fi-social-twitter"></i> <i class="fi-social-linkedin"></i> </p>
-
+                    <p>
+                        <a href="https://github.com/matheusmessora" target="_blank"><i class="fi-social-github"></i></a>
+                        <a href="https://twitter.com/POGnotFound" target="_blank"><i class="fi-social-twitter"></i></a>
+                        <a href="https://br.linkedin.com/in/matheusmessora" target="_blank"><i class="fi-social-linkedin"></i></a>
+                    </p>
                 </div>
             </div>
             <div class="scroller" data-href="section">
