--- a/src/preparando-ambiente-de-desenvolvimento-java.html
+++ b/src/preparando-ambiente-de-desenvolvimento-java.html
@@ -112,8 +112,9 @@ Java HotSpot(TM) Client VM (build 24.79-b02, mixed mode)
 </ul>
 
                     </div>
-                </article>
 
+                    include "includes/disqus.html"
+                </article>
             </div>
         </div>
     </main>
