--- a/src/voce-e-um-bom-programador.html
+++ b/src/voce-e-um-bom-programador.html
@@ -187,6 +187,9 @@ include "includes/menu.html"
                         </ul>
 
                     </div>
+
+
+                    include "includes/disqus.html"
                 </article>
 
             </div>
